# stockbook

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
macro/: Cargo.toml  build.rs
macro/src/: lib.rs
src/: data.rs  iter.rs  lib.rs  meta.rs
src/iter/: pixels.rs
src/meta/: size.rs
tests/: integration.rs
